--- a/index.html
+++ b/index.html
@@ -5,25 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.html/style.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <header>
-        <h1><span>Raj</span></samp> kumar</h1>
-        <h3>Portfolio</h3>
-        <h3>Blog</h3>
-        <h3><button>Hire Me</button></h3>
         <nav>
+            <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Portfoilo</li>
+                <li>Blog</li>
+                <li><button>Hire Me</button></li>
             </ul>
         </nav>
     </header>
     <main></main>
     <footer></footer>
-    
 </body>
 </html>
