--- a/index.html
+++ b/index.html
@@ -53,6 +53,33 @@
                 </div>
             </div>
         </section>
+        <!-- What i do Section -->
+        <section class="What-i-do">
+            <h3 class="section-title">What i Do</h3>
+            <!-- .skills-container>skills*4>img+p.skill-title+p.skill-decription>lorem15 -->
+            <div class="skills-container">
+                <div class="skills">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-decription">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quidem incidunt nemo fugiat consequatur voluptatibus.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-decription">Natus quae optio voluptatem iusto modi eveniet. Dolorum, aut quis itaque cumque distinctio maiores libero!</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-decription">Id est obcaecati eaque, molestias reiciendis eos at numquam, exercitationem pariatur doloribus cum autem tempora.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">NodeJs</p>
+                    <p class="skill-decription">Illo libero magni repellendus dolor, at cumque reprehenderit totam id explicabo? Reiciendis consectetur aperiam excepturi!</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
