added what i do

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
                 </div>
             </div>
         </section>
+        <!-- Rusume Section -->
+        <Section class="resume">
+            <h3 class="section-title">
+                A summary of My Resume
+            </h3>
+        </Section>
+
     </main>
     <footer></footer>
 </body>
