--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header class="header">
@@ -24,7 +28,8 @@
             <div>
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-desciption">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-desciption">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
             </div>
             <img src="images/hardy.png" alt="">
@@ -33,7 +38,10 @@
     <main>
         <section class="about">
             <h3 class="section-title">About me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
             <div class="about-info-containr">
                 <div class="about-info">
                     <p class="info-title">Name</p>
@@ -61,33 +69,92 @@
                 <div class="skills">
                     <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanilla JavaScript</p>
-                    <p class="skill-decription">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quidem incidunt nemo fugiat consequatur voluptatibus.</p>
+                    <p class="skill-decription">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati
+                        quidem incidunt nemo fugiat consequatur voluptatibus.</p>
                 </div>
                 <div class="skills">
                     <img src="images/icons/react.png" alt="">
                     <p class="skill-title">React</p>
-                    <p class="skill-decription">Natus quae optio voluptatem iusto modi eveniet. Dolorum, aut quis itaque cumque distinctio maiores libero!</p>
+                    <p class="skill-decription">Natus quae optio voluptatem iusto modi eveniet. Dolorum, aut quis itaque
+                        cumque distinctio maiores libero!</p>
                 </div>
                 <div class="skills">
                     <img src="images/icons/mongo.png" alt="">
                     <p class="skill-title">MongoDB</p>
-                    <p class="skill-decription">Id est obcaecati eaque, molestias reiciendis eos at numquam, exercitationem pariatur doloribus cum autem tempora.</p>
+                    <p class="skill-decription">Id est obcaecati eaque, molestias reiciendis eos at numquam,
+                        exercitationem pariatur doloribus cum autem tempora.</p>
                 </div>
                 <div class="skills">
                     <img src="images/icons/nodejs.png" alt="">
                     <p class="skill-title">NodeJs</p>
-                    <p class="skill-decription">Illo libero magni repellendus dolor, at cumque reprehenderit totam id explicabo? Reiciendis consectetur aperiam excepturi!</p>
+                    <p class="skill-decription">Illo libero magni repellendus dolor, at cumque reprehenderit totam id
+                        explicabo? Reiciendis consectetur aperiam excepturi!</p>
                 </div>
             </div>
         </section>
         <!-- Rusume Section -->
         <Section class="resume">
-            <h3 class="section-title">
-                A summary of My Resume
+            <h3 class="section-title">A summary of My Resume
             </h3>
+
+            <div class="resume-content">
+
+                <div>
+                    <h class="resume-title">My Education</h>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                </div>
+                <div>
+                    <h class="resume-title">My Education</h>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                </div>
+                
+
+                
+            </div>
         </Section>
 
     </main>
     <footer></footer>
 </body>
+
 </html>
