--- a/index.html
+++ b/index.html
@@ -156,6 +156,33 @@
                 <button class="btn-primary">Download CV</button>
             </div>
         </Section>
+        <!-- contact section -->
+        <section class="contact">
+            <div>
+                <h3 class="Section-title">Let's Connect</h3>
+                <p class="Section-discription">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <div class="Section-title">
+                    <h3 class="Section-title">Let's Message me</h3>
+                    <form action="">
+                        <input type="text" placeholder="YOur Name">
+                        <input type="text" placeholder="Your Email">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                        <input class="btn-primary" type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer></footer>
