--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/icons/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/2eb05ff224.js" crossorigin="anonymous"></script>
 </head>
 
@@ -31,7 +32,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-desciption">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-primary"><i class="fa-duotone fa-download"></i>Download CV</button>
+                <button class="btn-primary"><i class="fa-duotone fa-download"></i> Download CV</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -154,7 +155,7 @@
                 
             </div>
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-duotone fa-download"></i>Download CV</button>
             </div>
         </Section>
         <!-- contact section -->
